--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.11.0",
     "bootstrap": "^5.3.8",
     "chart.js": "^4.5.0",
+    "flatpickr": "^4.6.13",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
@@ -24,6 +25,7 @@
     "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-feather": "^2.0.10",
+    "react-flatpickr": "^4.0.11",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
