--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
+    "react-csv": "^2.2.2",
     "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-feather": "^2.0.10",
