--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.8",
     "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "flatpickr": "^4.6.13",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
