changes in env backend file

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 MONGO_URL=mongodb://127.0.0.1/DreamsRent
 
-JWT_SECRET=your_jwt_secret
+JWT_SECRET=Protect@@@@
+EMAIL_SECRET=EmailVerifySecret@@@
 PORT=7777
 CORS_ORIGIN=http://localhost:5173
 BCRYPT_SALT_ROUNDS=10
